--- a/templates/header.html
+++ b/templates/header.html
@@ -25,7 +25,7 @@
                 <li><a href="#/contact">Contact</a>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown">FordPie Blog <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#/blog">List of Posts</a>
                         </li>
